--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -12,16 +12,21 @@ env:
 jobs:
   apps:
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v2
     - name: Build
       run: cargo build --verbose
       working-directory: apps
+
+    - name: Format Check
+      run: cargo fmt -- --check
+      working-directory: apps
+
     - name: Run tests
       run: cargo test --verbose
       working-directory: apps
-      
+
   api:
     runs-on: ubuntu-latest
 
@@ -30,6 +35,11 @@ jobs:
     - name: Build
       run: cargo build --verbose
       working-directory: api
+
+    - name: Format Check
+      run: cargo fmt -- --check
+      working-directory: api
+
     - name: Run tests
       run: cargo test --verbose
       working-directory: api
